Fix invite link wrap on smaller devices

--- a/src/styles/components/_share-link.scss
+++ b/src/styles/components/_share-link.scss
@@ -19,6 +19,13 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        
+        span {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            max-width: calc(100% - 80px);
+        }
 
         &__copied {
             color: $color-green;
